; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/net/extr_getnameinfo.c_find_afd.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/net/extr_getnameinfo.c_find_afd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.afd = type { i32 }

@PF_UNSPEC = common dso_local global i32 0, align 4
@afdl = common dso_local global %struct.afd* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.afd* (i32)* @find_afd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.afd* @find_afd(i32 %0) #0 {
  %2 = alloca %struct.afd*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.afd*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @PF_UNSPEC, align 4
  %7 = icmp eq i32 %5, %6
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store %struct.afd* null, %struct.afd** %2, align 8
  br label %30

9:                                                ; preds = %1
  %10 = load %struct.afd*, %struct.afd** @afdl, align 8
  %11 = getelementptr inbounds %struct.afd, %struct.afd* %10, i64 0
  store %struct.afd* %11, %struct.afd** %4, align 8
  br label %12

12:                                               ; preds = %26, %9
  %13 = load %struct.afd*, %struct.afd** %4, align 8
  %14 = getelementptr inbounds %struct.afd, %struct.afd* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = icmp sgt i32 %15, 0
  br i1 %16, label %17, label %29

17:                                               ; preds = %12
  %18 = load %struct.afd*, %struct.afd** %4, align 8
  %19 = getelementptr inbounds %struct.afd, %struct.afd* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* %3, align 4
  %22 = icmp eq i32 %20, %21
  br i1 %22, label %23, label %25

23:                                               ; preds = %17
  %24 = load %struct.afd*, %struct.afd** %4, align 8
  store %struct.afd* %24, %struct.afd** %2, align 8
  br label %30

25:                                               ; preds = %17
  br label %26

26:                                               ; preds = %25
  %27 = load %struct.afd*, %struct.afd** %4, align 8
  %28 = getelementptr inbounds %struct.afd, %struct.afd* %27, i32 1
  store %struct.afd* %28, %struct.afd** %4, align 8
  br label %12

29:                                               ; preds = %12
  store %struct.afd* null, %struct.afd** %2, align 8
  br label %30

30:                                               ; preds = %29, %23, %8
  %31 = load %struct.afd*, %struct.afd** %2, align 8
  ret %struct.afd* %31
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
